Move handler to hook init

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -87,11 +87,14 @@ body:
         test('simple scenario', () => {
           // SETUP: With a VoteAction.
           const App = () => {
-            const [action] = useSchemaOrgAction({
-              '@type': 'VoteAction',
-              actionOption: 'upvote',
-              'actionOption-input': { valueName: 'action' }
-            });
+            const [action] = useSchemaOrgAction(
+              {
+                '@type': 'VoteAction',
+                actionOption: 'upvote',
+                'actionOption-input': { valueName: 'action' }
+              },
+              () => Promise({})
+            );
 
             return JSON.stringify(action);
           };
@@ -99,8 +102,10 @@ body:
           // WHEN: Rendered.
           const renderer = create(<App />);
 
-          // THEN: It should render JSON of { actionOption: 'upvote' }.
-          expect(renderer.toJSON()).toMatchInlineSnapshot(`"{"actionOption":"upvote"}"`);
+          // THEN: It should render JSON of { "@type": "VoteAction", actionOption: 'upvote', actionStatus: 'PotentialActionStatus' }.
+          expect(renderer.toJSON()).toMatchInlineSnapshot(
+            `"{"actionStatus":"PotentialActionStatus","@type":"VoteAction","actionOption":"upvote"}"`
+          );
         });
   - type: input
     attributes:
