--- a/packages/pages/package.json
+++ b/packages/pages/package.json
@@ -32,7 +32,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "use-schema-org-action": "^0.0.0-0",
-    "use-state-with-ref": "^0.0.1",
-    "valibot": "^0.27.1"
+    "use-state-with-ref": "^0.0.1"
   }
 }
