--- a/packages/use-schema-org-action/src/tsconfig.json
+++ b/packages/use-schema-org-action/src/tsconfig.json
@@ -1,11 +1,10 @@
 // This configuration file is for VSCode only.
 {
   "compilerOptions": {
-    "downlevelIteration": true,
     "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "jsx": "react",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "noEmit": true,
     "strict": true
   },
