--- a/.github/workflows/pull-request-validation.yml
+++ b/.github/workflows/pull-request-validation.yml
@@ -9,7 +9,7 @@ jobs:
   call-workflow:
     strategy:
       matrix:
-        node-version: lts/*
+        node-version: 'lts/*'
         switch: [current, react-16, react-17, react-18]
     uses: compulim/workflows/.github/workflows/pull-request-validation.yml@main
     with:
