--- a/packages/use-schema-org-action/src/tsconfig.precommit.production.json
+++ b/packages/use-schema-org-action/src/tsconfig.precommit.production.json
@@ -5,7 +5,8 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "noEmit": true,
-    "strict": true
+    "strict": true,
+    "target": "ESNext"
   },
   "exclude": ["**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx", "__tests__/**/*"],
   "extends": "@tsconfig/strictest/tsconfig.json"
