--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -100,10 +100,10 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.45",
+    "core-js": "^3.37.1",
     "esbuild": "^0.19.9",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "p-defer": "^4.0.0",
     "prettier": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
