--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -62,6 +62,7 @@
   "switch:react-16": {
     "devDependencies": {
       "@testing-library/react": "^12",
+      "@testing-library/react-hooks": "latest",
       "@types/react": "^16",
       "react": "16.8.0",
       "react-dom": "16.8.0",
@@ -71,6 +72,7 @@
   "switch:react-17": {
     "devDependencies": {
       "@testing-library/react": "^12",
+      "@testing-library/react-hooks": "latest",
       "@types/react": "^17",
       "react": "17.0.0",
       "react-dom": "17.0.0",
