--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-0",
   "description": "React hook for handling logics of Schema.org actions.",
   "files": [
-    "./lib/"
+    "./dist/"
   ],
   "exports": {
     ".": {
