--- a/packages/pages/package.json
+++ b/packages/pages/package.json
@@ -2,6 +2,7 @@
   "name": "use-schema-org-action-pages",
   "version": "0.0.0-0",
   "description": "",
+  "private": true,
   "scripts": {
     "build": "esbuild --bundle --entry-names=[name]/[ext]/main --jsx=automatic --minify --outdir=./public/static/ --sourcemap app=./src/app/index.tsx",
     "bump": "npm run bump:prod && npm run bump:dev && npm run bump:auditfix",
@@ -58,6 +59,5 @@
     "react-dom": "^18.2.0",
     "use-schema-org-action": "^0.0.0-0",
     "use-state-with-ref": "^0.0.1"
-  },
-  "private": true
+  }
 }
