--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -110,6 +110,6 @@
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "use-state-with-ref": "^0.1.0",
-    "valibot": "^0.31.0-rc.6"
+    "valibot": "^0.30.0"
   }
 }
