--- a/packages/pages/package.json
+++ b/packages/pages/package.json
@@ -58,6 +58,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "use-schema-org-action": "^0.0.0-0",
-    "use-state-with-ref": "^0.1.0"
+    "use-state-with-ref": "^0.1.0",
+    "valibot": "^0.30.0"
   }
 }
