--- a/packages/use-schema-org-action/src/tsconfig.precommit.production.json
+++ b/packages/use-schema-org-action/src/tsconfig.precommit.production.json
@@ -17,5 +17,5 @@
     "**/*.test.tsx",
     "__tests__/**/*"
   ],
-  "extends": "@tsconfig/strictest/tsconfig.json"
+  "extends": "./tsconfig.custom.json"
 }
