--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -56,6 +56,7 @@
       "@testing-library/react": "^12",
       "@testing-library/react-hooks": "latest",
       "@types/react": "^16",
+      "@types/react-dom": "^16",
       "react": "16.9.0",
       "react-dom": "16.9.0",
       "react-test-renderer": "16.9.0"
@@ -66,6 +67,7 @@
       "@testing-library/react": "^12",
       "@testing-library/react-hooks": "latest",
       "@types/react": "^17",
+      "@types/react-dom": "^17",
       "react": "17.0.0",
       "react-dom": "17.0.0",
       "react-test-renderer": "17.0.0"
@@ -74,6 +76,7 @@
   "switch:react-18": {
     "devDependencies": {
       "@types/react": "^18",
+      "@types/react-dom": "^18",
       "react": "18.0.0",
       "react-dom": "18.0.0",
       "react-test-renderer": "18.0.0"
@@ -92,6 +95,7 @@
     "@types/lodash": "^4.17.10",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.2",
     "core-js": "^3.38.1",
     "esbuild": "^0.24.0",
     "jest": "^29.7.0",
