--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -107,14 +107,17 @@
     "react-test-renderer": "^18.3.1",
     "react-wrap-with": "^0.1.0",
     "tsup": "^8.3.0",
+    "type-fest": "^4.32.0",
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "react": ">=16.9.0"
   },
   "dependencies": {
+    "iter-fest": "^0.2.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
+    "use-ref-from": "^0.1.0",
     "use-state-with-ref": "^0.1.0",
     "valibot": "^0.42.1"
   }
