Follow spec on input/output

--- a/packages/use-schema-org-action/jest.config.json
+++ b/packages/use-schema-org-action/jest.config.json
@@ -32,5 +32,6 @@
       }
     ]
   },
+  "transformIgnorePatterns": ["/node_modules/(?!(url-template)/)", "\\.pnp\\.[^\\/]+$"],
   "watchPathIgnorePatterns": ["\\.tmp\\."]
 }
