--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -108,7 +108,8 @@
     "react-wrap-with": "^0.1.0",
     "tsup": "^8.3.0",
     "type-fest": "^4.32.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "url-template": "^3.1.1"
   },
   "peerDependencies": {
     "react": ">=16.9.0"
