--- a/packages/pages/package.json
+++ b/packages/pages/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "url-template": "^3.1.1",
     "use-schema-org-action": "^0.0.0-0",
     "use-state-with-ref": "^0.1.0",
     "valibot": "^0.42.1"
