--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -78,7 +78,7 @@ body:
         *Support will be slow or denied if a test case is not provided.*
       render: js
       value: |
-        /** @jest-environment jsdom */
+        /** @jest-environment @happy-dom/jest-environment */
         /// <reference types="@types/jest" />
 
         import { create } from 'react-test-renderer';
