--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -87,6 +87,7 @@
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
     "@fluentui/react": "^8.121.4",
+    "@happy-dom/jest-environment": "^16.8.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@tsconfig/recommended": "^1.0.7",
@@ -99,7 +100,6 @@
     "core-js": "^3.38.1",
     "esbuild": "^0.24.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
     "publint": "^0.2.11",
     "react": "^18.3.1",
