--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -79,33 +79,52 @@ body:
       render: js
       value: |
         /** @jest-environment @happy-dom/jest-environment */
-        /// <reference types="@types/jest" />
 
-        import { create } from 'react-test-renderer';
+        import { act, renderHook } from '@testing-library/react';
         import { useSchemaOrgAction } from 'use-schema-org-action';
 
-        test('simple scenario', () => {
-          // SETUP: With a VoteAction.
-          const App = () => {
-            const [action] = useSchemaOrgAction(
-              {
-                '@type': 'VoteAction',
-                actionOption: 'upvote',
-                'actionOption-input': { valueName: 'action' }
-              },
-              () => Promise({})
-            );
-
-            return JSON.stringify(action);
-          };
+        test('should work', async () => {
+          const handler = jest.fn().mockResolvedValue({});
 
           // WHEN: Rendered.
-          const renderer = create(<App />);
-
-          // THEN: It should render JSON of { "@type": "VoteAction", actionOption: 'upvote', actionStatus: 'PotentialActionStatus' }.
-          expect(renderer.toJSON()).toMatchInlineSnapshot(
-            `"{"actionStatus":"PotentialActionStatus","@type":"VoteAction","actionOption":"upvote"}"`
+          const renderResult = renderHook(() =>
+            useSchemaOrgAction(
+              {
+                '@type': 'VoteAction',
+                'actionOption-input': { valueName: 'action' }
+              },
+              handler,
+              { actionOption: 'upvote' }
+            )
           );
+
+          // THEN: Should mark the "actionStatus" as "PotentialActionStatus"
+          expect(renderResult.result.current[0]).toEqual({
+            actionOption: 'upvote',
+            actionStatus: 'PotentialActionStatus'
+          });
+
+          // WHEN: Calling setActionState to update.
+          act(() => renderResult.result.current[1](actionState => ({ ...actionState, actionOption: 'downvote' })));
+
+          // THEN: Should have actionState.actionOption of "downvote".
+          expect(renderResult.result.current[0]).toEqual({
+            actionOption: 'downvote',
+            actionStatus: 'PotentialActionStatus'
+          });
+
+          // WHEN: Calling submit().
+          await act(() => renderResult.result.current[2].submit());
+
+          // THEN: Should have called the handler once.
+          expect(handler).toHaveBeenCalledTimes(1);
+          expect(handler).toHaveBeenLastCalledWith({ actionOption: 'downvote' }, expect.any(Map), expect.any(Object));
+
+          // THEN: Should mark the "actionStatus" as "CompletedActionStatus".
+          expect(renderResult.result.current[0]).toEqual({
+            actionOption: 'downvote',
+            actionStatus: 'CompletedActionStatus'
+          });
         });
   - type: input
     attributes:
