Add full input/output constraint (#14)
* Update useSchemaOrgAction signature

* Update signature

* Clean up

* Fix types

* Clean up type of schema

* Allow input from initialAction

* New sample

* Update API to get/set action

* Allow actionStatus-output

* Update signature

* Fix ESLint

* Update comment

* Update pages

* Update version number

* Bump to 0.1.0

* Update signature and improve clarity

* Add roadmap

* Expose VariableMap

* Add official test

* Follow spec on input/output

* Clean up

* Clean up

* Clean up

* Set to FailedActionStatus on invalid output

* Remove unreachable code

* Clean up

* Move to inputValidity

* Change to inputValidity

* Rename

* Ignore coverage

* Rename

* Rename to *Recursive

* Fix ESLint

* Move to actionState API

* Clean up

* Clean up

* Add initialActionState

* Add sample

* Add SearchApp sample

* Move to Happy DOM

* Add sample for bug

* Add JSDoc

* Add JSDoc

* Add JSDoc

* Add @types/react-test-renderer

* Fix demo

* Add msw

* Clean up

* Better sample

* Clean up

* Rename

* Update PR number

* Clean up

* Rename

* Clean up

* Clean up

* Fix ESLint

* Use act from @testing-library/react

* Add @testing-library/react

* Fix tests

* Fix tests

* Extract actionState from initialAction

* Freeze initialAction

* Update tests

* Clean up

* Remove unused file

* Fix ESLint

* Fix tests

* Update code snippet

* Add tests

* Fix ESLint

* Add tests

* Clean up

* Comment

* Clean up

* Clean up

* Rename

* Clean up

* Fix ESLint

* Fix ESLint

* Verbiage

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -78,34 +78,53 @@ body:
         *Support will be slow or denied if a test case is not provided.*
       render: js
       value: |
-        /** @jest-environment jsdom */
-        /// <reference types="@types/jest" />
+        /** @jest-environment @happy-dom/jest-environment */
 
-        import { create } from 'react-test-renderer';
+        import { act, renderHook } from '@testing-library/react';
         import { useSchemaOrgAction } from 'use-schema-org-action';
 
-        test('simple scenario', () => {
-          // SETUP: With a VoteAction.
-          const App = () => {
-            const [action] = useSchemaOrgAction(
+        test('should work', async () => {
+          const handler = jest.fn().mockResolvedValue({});
+
+          // WHEN: Rendered.
+          const renderResult = renderHook(() =>
+            useSchemaOrgAction(
               {
                 '@type': 'VoteAction',
                 actionOption: 'upvote',
                 'actionOption-input': { valueName: 'action' }
               },
-              () => Promise({})
-            );
-
-            return JSON.stringify(action);
-          };
-
-          // WHEN: Rendered.
-          const renderer = create(<App />);
-
-          // THEN: It should render JSON of { "@type": "VoteAction", actionOption: 'upvote', actionStatus: 'PotentialActionStatus' }.
-          expect(renderer.toJSON()).toMatchInlineSnapshot(
-            `"{"actionStatus":"PotentialActionStatus","@type":"VoteAction","actionOption":"upvote"}"`
+              handler
+            )
           );
+
+          // THEN: Should mark the "actionStatus" as "PotentialActionStatus"
+          expect(renderResult.result.current[0]).toEqual({
+            actionOption: 'upvote',
+            actionStatus: 'PotentialActionStatus'
+          });
+
+          // WHEN: Calling setActionState to update.
+          act(() => renderResult.result.current[1](actionState => ({ ...actionState, actionOption: 'downvote' })));
+
+          // THEN: Should have actionState.actionOption of "downvote".
+          expect(renderResult.result.current[0]).toEqual({
+            actionOption: 'downvote',
+            actionStatus: 'PotentialActionStatus'
+          });
+
+          // WHEN: Calling submit().
+          await act(() => renderResult.result.current[2].submit());
+
+          // THEN: Should have called the handler once.
+          expect(handler).toHaveBeenCalledTimes(1);
+          expect(handler).toHaveBeenLastCalledWith({ actionOption: 'downvote' }, expect.any(Map), expect.any(Object));
+
+          // THEN: Should mark the "actionStatus" as "CompletedActionStatus".
+          expect(renderResult.result.current[0]).toEqual({
+            actionOption: 'downvote',
+            actionStatus: 'CompletedActionStatus'
+          });
         });
   - type: input
     attributes:
