--- a/packages/pages/package.json
+++ b/packages/pages/package.json
@@ -61,10 +61,17 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "msw": "^2.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "url-template": "^3.1.1",
     "use-schema-org-action": "^0.0.0-0",
     "use-state-with-ref": "^0.1.0",
     "valibot": "^0.42.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public/assets/js"
+    ]
   }
 }
