--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "switch:react-18": "SWITCH_NAME=react-18 npm run switch:_",
     "test": "npm run test --if-present --workspaces"
   },
+  "pinDependencies": {
+    "eslint": [
+      "^8.57.0"
+    ]
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
