--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/compulim/use-schema-org-action.git"
+    "url": "https://github.com/compulim/use-schema-org-action.git"
   },
   "keywords": [
     "action",
