--- a/.github/workflows/bump-scaffold.yml
+++ b/.github/workflows/bump-scaffold.yml
@@ -1,10 +1,10 @@
-name: Bump scaffold
+name: 🧼 Bump scaffold
 
 on:
   workflow_dispatch:
     inputs:
       package-name:
-        default: use-schema-org-action
+        default: 'use-schema-org-action'
         description: Name of the package
         required: true
         type: string
