--- a/packages/integration-test/.eslintrc.custom.yml
+++ b/packages/integration-test/.eslintrc.custom.yml
@@ -1,7 +1,7 @@
 env:
   browser: true
 extends:
-  ../../.eslintrc.react.yml
+  - ../../.eslintrc.react.yml
 rules:
   # Disable for convenience
   react/display-name: off
