--- a/packages/use-schema-org-action/jest.config.json
+++ b/packages/use-schema-org-action/jest.config.json
@@ -1,5 +1,4 @@
 {
-  "testEnvironment": "@happy-dom/jest-environment",
   "testPathIgnorePatterns": ["/__setup__/", "/lib/", "/node_modules/", "/__types__/", "\\.pnp\\.[^\\/]+$"],
   "transform": {
     "/__tests__/types/": ["<rootDir>/__tests__/__setup__/typingTestTransformer.js"],
@@ -33,5 +32,6 @@
       }
     ]
   },
+  "transformIgnorePatterns": ["/node_modules/(?!(url-template)/)", "\\.pnp\\.[^\\/]+$"],
   "watchPathIgnorePatterns": ["\\.tmp\\."]
 }
