--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-schema-org-action-root",
-  "version": "0.1.1-0",
+  "version": "0.1.1",
   "description": "",
   "private": true,
   "author": "William Wong (https://github.com/compulim)",
