--- a/packages/use-schema-org-action/package.json
+++ b/packages/use-schema-org-action/package.json
@@ -114,24 +114,21 @@
       "18"
     ]
   },
+  "localPeerDependencies": {
+    "@compulim/test-harness": "0.0.0-0"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0"
+  },
   "devDependencies": {
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-react": "^7.28.5",
-    "@babel/preset-typescript": "^7.28.5",
-    "@fluentui/react": "^8.125.3",
-    "@happy-dom/jest-environment": "^20.0.11",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/react": "^16.3.1",
+    "@compulim/test-harness": "0.0.0-0",
     "@tsconfig/recommended": "^1.0.13",
     "@tsconfig/strictest": "^2.0.8",
-    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.21",
     "@types/node": "^25.0.3",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
-    "core-js": "^3.47.0",
-    "esbuild": "^0.27.2",
-    "jest": "^30.2.0",
+    "expect": "^30.2.0",
     "prettier": "^3.7.4",
     "publint": "^0.3.16",
     "react": "^18.3.1",
@@ -143,18 +140,12 @@
     "typescript": "^5.9.3",
     "url-template": "^3.1.1"
   },
-  "peerDependencies": {
-    "react": ">=16.8.0"
-  },
   "dependencies": {
     "iter-fest": "^0.3.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
-    "use-ref-from": "^0.1.0",
+    "use-ref-from": "^0.2.1",
     "use-state-with-ref": "^0.1.0",
     "valibot": "^1.2.0"
-  },
-  "localPeerDependencies": {
-    "@compulim/test-harness": "0.0.0-0"
   }
 }
